# Shepherd

./: .clang-tidy  .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  go.mod  go.sum
clientui/: .gitignore  CMakeLists.txt  README.md  app.go  main.go  makefile  wails.json
clientui/backend/config/: store.go
clientui/backend/kelpie/: client.go  events.go  tls.go
clientui/backend/service/: facade.go  types.go
clientui/data/: Stockman.qrc  Stockman.rc
clientui/data/stylesheets/Dialogs/: Connect.qss
clientui/data/themes/: Dark.qss  Light.qss
clientui/frontend/: index.html  package-lock.json  package.json  shims.d.ts  tsconfig.json  vite.config.ts
clientui/frontend/src/: App.vue  main.ts
clientui/frontend/src/api/: bindings.ts  types.ts
clientui/frontend/src/components/base/: StatCard.vue
clientui/frontend/src/components/console/: DemoConsole.vue
clientui/frontend/src/components/node/: NodeDetail.vue
clientui/frontend/src/components/timeline/: EventTimeline.vue
clientui/frontend/src/components/topology/: ForceGraph.vue  TopologyPanel.vue  TreeGraph.vue  graphUtils.ts
clientui/frontend/src/stores/: connection.ts  events.ts  metrics.ts  topology.ts
clientui/frontend/src/styles/: app.css  tokens.css
clientui/frontend/src/views/: ConnectView.vue  MainShell.vue
clientui/include/: External.h
clientui/include/Stockman/: AppContext.hpp  Forward.hpp  KelpieController.hpp  KelpieState.hpp  KelpieTypes.hpp  Stockman.hpp  Types.hpp  UiRegistry.hpp
clientui/include/Stockman/DBManager/: DBManager.hpp
clientui/include/Stockman/Grpc/: Client.hpp
clientui/include/UserInterface/: KelpiePanel.hpp  StockmanUI.hpp
clientui/include/UserInterface/Dialogs/: About.hpp  Connect.hpp
clientui/include/UserInterface/Pages/: ChatPage.hpp  LootPage.hpp  ShellPage.hpp  TaskingPage.hpp
clientui/include/Util/: Base.hpp  Base64.h  ColorText.h  Message.hpp  ThemeManager.hpp  UiConstants.hpp
clientui/src/: Main.cc  global.cc
clientui/src/Stockman/: KelpieController.cc  KelpieState.cc  Stockman.cc
clientui/src/Stockman/DBManager/: DBManager.cc  Kelpie.cc
clientui/src/Stockman/Grpc/: Client.cc
clientui/src/UserInterface/: Chat.cc  Internal.hpp  KelpiePanel.cc  Listeners.cc  Loot.cc  Network.cc  Operations.cc  Proxy.cc  Setup.cc  Shell.cc  Socks.cc  State.cc  StockmanUi.cc  Tasking.cc  Topology.cc  Transfer.cc  Wiring.cc  Workspace.cc
clientui/src/UserInterface/Dialogs/: About.cc  Connect.cc
clientui/src/UserInterface/Pages/: ChatPage.cc  LootPage.cc  ShellPage.cc  TaskingPage.cc
clientui/src/Util/: Base.cpp  Base64.cpp  ColorText.cpp  ThemeManager.cpp
cmd/flock/: main.go
cmd/kelpie/: main.go
cmd/lab/bootstrap/: main.go
docker/: Dockerfile  README_运行环境.md  docker-compose.yml
docs/: architecture.md  comparison.md  defense_architecture_map.md  defense_mock_qa.md  defenseqa.md  experiment_report.md  experiments.md  midterm.md  midterm_report.md  paper.md  review_findings.md  shepherd_paper.md  shepherd_vs_cobaltstrike.md  stockman_macos_setup.md  stockmanchecklist.md  stockmansetup.md
docs/data/: bootstrap_summary.csv  dtn_latency_samples.csv  dtn_latency_summary.csv
experiments/: README.md
experiments/analysis/: analyze_bootstrap.py  analyze_dtn_latency.py  metrics_to_csv.py  plot_svg.py
experiments/mininet/: README.md  topo.py
experiments/ns3/: README.md
experiments/trace_replay/: README.md  cutoff.py  example.jsonl  main.go  run_regress.py  run_soak.py  run_until_cutoff.py  soak.py
experiments/trace_replay/traces/: dataplane_big_roundtrip_n3.jsonl  dataplane_restart_interrupt_mix_n3.jsonl  dataplane_roundtrip_n3.jsonl  dataplane_token_expire_n3.jsonl  dataplane_token_replay_n3.jsonl  dtn_backpressure_fairness_n3.jsonl  dtn_burst_leaf_sleep_kill_parent_n2.jsonl  dtn_deepchain_leaf_sleep_kill_parent_n3.jsonl  dtn_hold_ttl_interaction_n3.jsonl  dtn_hold_until_sleep_window_n3.jsonl  dtn_latency_baseline.jsonl  dtn_latency_sleep16_work2.jsonl  dtn_latency_sleep8_work2.jsonl  dtn_leaf_sleep_kill_parent_n2.jsonl  dtn_mid_sleep_kill_parent_n1.jsonl  dtn_midchain_sleep_parent_n2.jsonl  dtn_persist_kelpie_restart_n3.jsonl  dtn_priority_order_n3.jsonl  dtn_queue_capacity_drop_n3.jsonl  dtn_queue_ttl_expire_n3.jsonl  dtn_sleep_effect_baseline.jsonl  dtn_sleep_effect_sleep16_work2.jsonl  dtn_sleep_effect_sleep8_work2.jsonl  gossip_memo_heal_kill_parent_n2.jsonl  gossip_memo_heal_kill_parent_n3.jsonl  gossip_memo_partition_kill_mid_n4_n8.jsonl  gossip_memo_scale_n16.jsonl  gossip_memo_scale_n8.jsonl  gossip_partition_churn_n12.jsonl  gossip_partition_churn_n16.jsonl  io_burst_after_kelpie_restart_n3.jsonl  io_burst_heal_kill_parent_n3.jsonl  io_burst_heavy_after_kelpie_restart_n3.jsonl  io_burst_heavy_interrupt_target_n3.jsonl  io_burst_interrupt_target_n3.jsonl  kelpie_restart_recovery_n3.jsonl  (+4 more)
formal/: README.md  docker-compose.yml
formal/proverif/: shepherd_handshake.pv
formal/tamarin/: handshake.spthy
integration/handshake/: handshake_test.go
integration/manual/: manual_repair_test.go
integration/shell/: shell_session_test.go
internal/dataplanepb/: dataplane.pb.go  dataplane_grpc.pb.go
pkg/bus/: router.go  router_test.go
pkg/crypto/: aes.go  gzip.go
pkg/filebrowser/: filebrowser.go
pkg/global/: global_test.go  registry.go  session.go  store.go
pkg/logging/: logging.go  logging_test.go
pkg/session/: session.go
pkg/share/: preauth.go  preauth_test.go  proxy.go  secret.go
pkg/streamid/: streamid.go
pkg/utils/: io.go  mailbox.go  mailbox_test.go  safe_conn.go  utils.go  utils_test.go
protocol/: fuzz_payload_test.go  generate.go  gossip.go  gossip_serialization_test.go  http.go  http_config.go  http_test.go  logger.go  messages_generated.go  messages_generated_test.go  payload.go  protocol.go  raw.go  raw_test.go  stream.go  supplemental_test.go  websocket.go  websocket_test.go
script/: ci.sh  demo_docker_chain.sh  experiments.sh  gen_clientui_protos.sh  gen_kelpieui_protos.sh  goprotos.sh  reuse.py  run_experiments_local.sh
tools/: check_constants.sh
tools/gencodec/: main.go
(+204 files in other folders)
